# OthelliteCpp

./: .clang-format  .gitignore  CMakeLists.txt  Folder.DotSettings  README.md
othellite/: CMakeLists.txt  board.cpp  board.hpp  common.hpp  direction.cpp  direction.hpp  position.cpp  position.hpp
othellite-cli/: CMakeLists.txt  main.cpp
othellite-lib/: CMakeLists.txt  board.cpp  board.hpp  common.cpp  common.hpp  console_notifier.cpp  console_notifier.hpp  default_game.hpp  direction.cpp  direction.hpp  game.cpp  game.hpp  game_impl.hpp  game_result.cpp  game_result.hpp  player.cpp  player.hpp  position.cpp  position.hpp
reviser-ai/: CMakeLists.txt  random_player.cpp  random_player.hpp
reviser-ai/include/: random_player.hpp
reviser-ai/src/: random_player.cpp
reviser-cli/: CMakeLists.txt  console_notifier.cpp  console_notifier.hpp  main.cpp  simple_command_line_player.cpp  simple_command_line_player.hpp
reviser-cli/include/: console_notifier.hpp  simple_command_line_player.hpp
reviser-cli/src/: console_notifier.cpp  main.cpp  simple_command_line_player.cpp
reviser-lib/: CMakeLists.txt  array_board.cpp  array_board.hpp  board.cpp  board.hpp  common.cpp  common.hpp  console_notifier.cpp  console_notifier.hpp  default_game.hpp  direction.cpp  direction.hpp  game.cpp  game.hpp  game_result.cpp  game_result.hpp  player.cpp  player.hpp  position.cpp  position.hpp
reviser-lib/include/: array_board.hpp  board.hpp  common.hpp  default_game.hpp  direction.hpp  game.hpp  player.hpp  position.hpp
reviser-lib/src/: direction.cpp  game.cpp  game_result.cpp  player.cpp
test/: CMakeLists.txt  board_test.cpp  common_test.cpp  direction_test.cpp  game_test.cpp  position_test.cpp  test_main.cpp  utilities.hpp
